--- a/products/health-care/appointments/va-online-scheduling/team/retro/retros-2021-22.md
+++ b/products/health-care/appointments/va-online-scheduling/team/retro/retros-2021-22.md
@@ -1,6 +1,14 @@
 # VAOS Retros
 
 <details>
+<summary>November 22, 2022</summary>
+
+<img width="1424" alt="Screen Shot 2022-12-05 at 10 25 33 AM" src="https://user-images.githubusercontent.com/90797205/205675507-8a1d559e-88b7-47ab-904b-327f4d90b6c5.png">
+
+  
+</details>
+
+<details>
 <summary>November 08, 2022</summary>
 
 <img width="1415" alt="Screen Shot 2022-11-08 at 4 12 53 PM" src="https://user-images.githubusercontent.com/90797205/200676733-09c54ce3-aa60-4ab6-9a63-99e88a76e82f.png">
