--- a/products/health-care/appointments/va-online-scheduling/team/retro/retros-2021-22.md
+++ b/products/health-care/appointments/va-online-scheduling/team/retro/retros-2021-22.md
@@ -1,12 +1,20 @@
 # VAOS Retros
 
 <details>
+<summary>December 7, 2022</summary>
+
+<img width="1424" alt="Screen Shot 2022-12-07 at 02 18 31 PM" src="https://user-images.githubusercontent.com/97117349/206275274-82bb5e0e-a16b-4b26-9c34-0e0144d2033e.png">
+
+</details>
+
+
+<details>
 <summary>November 22, 2022</summary>
 
 <img width="1424" alt="Screen Shot 2022-12-05 at 10 25 33 AM" src="https://user-images.githubusercontent.com/90797205/205675507-8a1d559e-88b7-47ab-904b-327f4d90b6c5.png">
 
-  
 </details>
+
 
 <details>
 <summary>November 08, 2022</summary>
