--- a/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P3-120722-JS.md
+++ b/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P3-120722-JS.md
@@ -14,12 +14,12 @@ Jessica Stump (jessica.stump@adhocteam.us)
 ## Intro
 - "I am outspoken and I do have opinions - off we go"
 
-Faily frequently, do travel claims. have 4-6 appointments per month, back and forth there. 6-10 times per month.
-Id.com or my healthevet - use one of those portals
+- Faily frequently, do travel claims. have 4-6 appointments per month, back and forth there. 
+- 6-10 times per month. Id.com or my healthevet - use one of those portals
 
-With the VA for probably 30+ years. Maybe 35 years. Perfevied to most of the incarnations - what is happening now is really spectacular. And now you submit it and it goes weehre it is supposed to go, proof of delivery. 
-They can't just throw it away. It is so slick now, anybody that complains about it should just shut up.
-You are actually doing the work and not just pretending to do the work, earnest and willing to learn.
+- With the VA for probably 30+ years. Maybe 35 years. Perviewed to most of the incarnations - what is happening now is really spectacular. And now you submit it and it goes where it is supposed to go, proof of delivery. 
+- They can't just throw it away. It is so slick now, anybody that complains about it should just shut up.
+- You are actually doing the work and not just pretending to do the work, earnest and willing to learn.
 
 
 
@@ -32,11 +32,10 @@ You are actually doing the work and not just pretending to do the work, earnest 
 - The DD14 thing is something that needs to be streamlined as well. People think they have to get the DD14 before they can do this, there should be something backended where they don' have to physically get the DD14.
 - Some are in the system, if you have social, somebody should be able to back end those 14's.
 - I would do start your application as 1, gather info as 2, check eligibility. If you say you are starting application that is getting people moving in the direction. 
-- 
+
 
 > Participant questions:
 > On a scale of 1-5 (1 being non very poorly and 5 being very well) - how prepared does this page make you feel about the application you are about to begin? Why?
-
 
 **Answer**
 - 3
@@ -44,19 +43,15 @@ You are actually doing the work and not just pretending to do the work, earnest 
 > Can you tell us more about what you would have to do in preparation for filling out this application?
 
 **Answer**
-
-I would put start your application first, they are there to start that applicatiton. 
+- I would put start your application first, they are there to start that applicatiton. 
 it is a rocky road to get to this spot for a lot of people, getting people to this place is fraught with a lot of problems. 
-Congratualtions you have gotten here, let's start your application. They you can gather your informaiton to check your eligibility.
-Based on what you are asking for, how it is positive here, i would change up that format, so when they get there they feel like they are starting their application.
+- Congratualtions you have gotten here, let's start your application. They you can gather your informaiton to check your eligibility.
+- Based on what you are asking for, how it is positive here, i would change up that format, so when they get there they feel like they are starting their application.
+- Start your application should have a blue field as well.
 
 > Things to watch for:
 > - [Quotes from participant about any content on the intro page that makes them feel uneasy, confused or not prepared to complete application.]
 > - [Is signing in the partipants next action or do they say they wouldn't sign in to complete the application?]
-
-
-**Observations & Notes**
-- Start your application should have a blue field as well. (P3 comment)
 
 
 ## Task - Veteran information
@@ -245,7 +240,7 @@ Based on what you are asking for, how it is positive here, i would change up tha
 - [ ] 0 = no part of the task completed, much difficulty
 - [ ] 1 = Partial completion, much overlooked or task was difficult
 - [ ] 2 = Partial completion, some areas were overlooked or task was slightly difficult
-- [ ] 3 = Most of the task was completed with little difficulty
+- [x] 3 = Most of the task was completed with little difficulty
 - [ ] 4 = All parts of the task were completed with no difficulty
 
 
