--- a/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P4-120722-JS.md
+++ b/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P4-120722-JS.md
@@ -350,3 +350,6 @@ Remove from list
 - Only on my income tax, other than that no.
 
 
+- When i do things on my smartphone, it is not as smart as my laptop. Something gets lost with what you are trying to do here. When people are looking at this informatin, on smartphone or laptop, they realize there might be more to it.
+- I kind of get lost in this now, try and stay up with what I can to get it done. I was basically on paper my whole life. The paper forms are harsh.
+- Most of the time, what I do with the VA is online/email. Or I get a telephone call. 
