--- a/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P4-120722-JS.md
+++ b/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P4-120722-JS.md
@@ -14,7 +14,7 @@ Jessica Stump (jessica.stump@adhocteam.us)
 ---
  
 ## Intro
-- Yes, (usee VA.gov to sign in)
+- Yes (uses VA.gov to sign in question)
 - At least twice per month
 - (income/family question) Yes
  
@@ -38,7 +38,7 @@ Jessica Stump (jessica.stump@adhocteam.us)
 
 > Things to watch for:
 > - [Quotes from participant about any content on the intro page that makes them feel uneasy, confused or not prepared to complete application.]
-> - [Is signing in the partipants next action or do they say they wouldn't sign in to complete the application?]
+> - [Is signing in is the partipants next action or do they say they wouldn't sign in to complete the application?]
 
 
 
@@ -46,7 +46,7 @@ Jessica Stump (jessica.stump@adhocteam.us)
 
 **Quotes**
 -  Talking slow because I type with one finger
--  I'm good with what you got there so far (name)
+-  I'm good with what you got there so far (name page)
 -  Why did they skip 23? (prototype typo)
 -  That is my birthday
 - It is clear to me and I am 74 - losing brain cells on a daily
@@ -60,7 +60,6 @@ Jessica Stump (jessica.stump@adhocteam.us)
 - Not at all (nothing confusing)
 - You guys have it pretty simple
 - I don't care much about Mr. Mrs and all that balogna
-- 
 
 
 > Things to watch for:
