--- a/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P3-120722-JS.md
+++ b/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P3-120722-JS.md
@@ -1,6 +1,3 @@
-[Reference Mural for live notes/synthesis](https://app.mural.co/t/adhoccorporateworkspace2583/m/adhoccorporateworkspace2583/1666894526417/3cd5fb1ef447104ac677305a840849e322956178?sender=u9b3a9c1b688c0e4bb4994314)
-
-
 # Participant Number 3
 
 **Date:** December 7, 2022
@@ -25,9 +22,9 @@ Jessica Stump (jessica.stump@adhocteam.us)
 
 
 ## Task - Start Application
-**Quotes**
+**Quotes/Notes**
 - (starts reading headlines) there is the mental health thing, right away
-- I would put the mental health thing under the gather your information thing.
+- "I would put the mental health thing under the gather your information thing."
 - People who needed serious help, if they come to that first, they will jump. Get them to give you the information before throwing the mental health thing, they will be less likey to run away from the process. 
 - The DD14 thing is something that needs to be streamlined as well. People think they have to get the DD14 before they can do this, there should be something backended where they don' have to physically get the DD14.
 - Some are in the system, if you have social, somebody should be able to back end those 14's.
@@ -352,3 +349,8 @@ Back to intro page rating - prepared rating
 - Doing any of this by yourself is really daunting
 - The interface and usability is awesome
 - You are making a difficult situation easier.
+
+---
+
+
+[Reference Mural for synthesis](https://app.mural.co/t/adhoccorporateworkspace2583/m/adhoccorporateworkspace2583/1666894526417/3cd5fb1ef447104ac677305a840849e322956178?sender=u9b3a9c1b688c0e4bb4994314)
