--- a/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P3-120722-JS.md
+++ b/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P3-120722-JS.md
@@ -8,18 +8,14 @@
 Jessica Stump (jessica.stump@adhocteam.us)
 
 ---
-## Intro
+## Intro - Warm-up Questions
 - "I am outspoken and I do have opinions - off we go"
 
-- Faily frequently, do travel claims. have 4-6 appointments per month, back and forth there. 
+- Faily frequently, do travel claims. have 4-6 appointments per month in (?), back and forth there. 
 - 6-10 times per month. Id.com or my healthevet - use one of those portals
 
 - With the VA for probably 30+ years. Maybe 35 years. Perviewed to most of the incarnations - what is happening now is really spectacular. And now you submit it and it goes where it is supposed to go, proof of delivery. 
 - They can't just throw it away. It is so slick now, anybody that complains about it should just shut up.
-- You are actually doing the work and not just pretending to do the work, earnest and willing to learn.
-
-
-
 
 ## Task - Start Application
 **Quotes/Notes**
@@ -43,7 +39,7 @@ Jessica Stump (jessica.stump@adhocteam.us)
 - I would put start your application first, they are there to start that applicatiton. 
 it is a rocky road to get to this spot for a lot of people, getting people to this place is fraught with a lot of problems. 
 - Congratualtions you have gotten here, let's start your application. They you can gather your informaiton to check your eligibility.
-- Based on what you are asking for, how it is positive here, i would change up that format, so when they get there they feel like they are starting their application.
+- Based on what you are asking for, how it is positive here, I would change up that format, so when they get there they feel like they are starting their application.
 - Start your application should have a blue field as well.
 
 > Things to watch for:
@@ -53,9 +49,19 @@ it is a rocky road to get to this spot for a lot of people, getting people to th
 
 ## Task - Veteran information
 
-**Quotes**
-- Socials good, 
-
+**Quote/Notess**
+- Social is good, 
+- First questions move through easily, 
+- Answers that he normally fills out forms on a mobile device
+- (Comments that he uses all - iMac, iPad and iPhone, uses a spectrem of devices)
+- Pauses on American Indian page, IHCIA, "huh"
+- (Impressions of this page) = I understand percicley what you are asking for, and I would say something about it early in the blockage. Under the header. As to what the IHCIA is
+- I'm an 1/8 Cherokee, it is something that applies, but (pause). It is unwieldy. If you are first nations, if you are this click here for eligibiltiy informaiton concerning this or that. 
+- It can take you to a sidebar, instead of having everybody read this. Go back to the top and what is IHCIA. I understand res throry, first nations from Alaska. I think taking to a sidebar, instead of just out of the bag, n ot making everybody fool around with it.
+- Like the previous screen - whatever we are doing these days- take you to a side bar then bring you back.
+- Asking everybody for qualifiers would determine that
+- 
+- Numbers addresses, continue that is good
 
 > Participant questions:
 > - What worked well for you?
@@ -65,25 +71,11 @@ it is a rocky road to get to this spot for a lot of people, getting people to th
 **Answers**
 - No, nothing unclear or confusing. It is perfect. 
 - (Add) a lot of stuff you are going to have to add, my perosnal needs it is all good. Some will say include this or that, I am not that complicated. 
-- My gender at birth (laughed at this question)
-- 
+
 
 > Things to watch for:
 > - [Does the participant comment on the length of this section of the form, number of questions/page or the progress bar?]
-> - [New American Indian question]
-> - [New gender identity question, content on page, interaction with additional info content, comment on order or labels of choices]
-
-**Observations & Notes**
-- First questions move through easily, 
-- Answers that he normally fills out forms on a mobile device
-- Comments that he uses all - iMac, iPad and iPhone, uses a spectrem of devices
-- Pauses on American Indian page, I HCIA, "huh"
-- (Impressions of this page) = I understand percicley what you are asking for, and I would say something about it early in the blockage. Under the header. As to what the IHCIA is
-- I'm an 1/8 Cherokee, it is something that applies, but (pause). It is unwieldy. If you are first nations, if you are this click here for eligibiltiy informaiton concerning this or that. 
-- It can take you to a sidebar, instead of having everybody read this. Go back to the top and what is IHCIA. I understand res throry, first nations from Alaska. I think taking to a sidebar, instead of just out of the bag, n ot making everybody fool around with it.
-- Like the previous screen - whatever we are doing these days- take you to a side bar then bring you back.
-- Asking everybody for qualifiers would determine that
-- Numbers addresses, continue that is good
+> - [American Indian question]
 
 **Observer rating of task completion (select below)**
 - [ ] 0 = no part of the task completed, much difficulty
@@ -95,7 +87,7 @@ it is a rocky road to get to this spot for a lot of people, getting people to th
 (Little difficulty with American Indian question)
 
 ## Task - VA benefits & military service 
-**Quotes**
+**Quotes/Notes**
 -  "Makes complete sense, real clear"
 - (rate experience) "pretty solid"
 - I know from experinece working with older Veterans not adept iwth this stuff, they don't have a clue. If you tell them they can take a picture of the documnet,
@@ -104,24 +96,33 @@ it is a rocky road to get to this spot for a lot of people, getting people to th
 - (notices last bullet after pointed out) = Yep there it is. 
 - The old dudes will see stuff " I can't do that" - they are off to drink coffee at the VFW
 - Thanks, I just didn't read to the bottom
-
+- Not interacting with the additional info component
+- (Answered above 50% disability rating)
+- (rate experience) "pretty solid"
 
 > Things to watch for:
 > - [Does the participant understand the questions and content through these sections?]
 > - [Does the participant comment that the questions are too intrusive?]
 
-**Observations & Notes**
-- Not interacting with the additional info component
-- Answered above 50% disability rating (in prod would get short form)
-- (rate experience) "pretty solid"
-
 ---
 
 ## PRIMARY Task - Financial disclosure question
-**Quotes**
+**Quotes/Notes**
 - This is the first shot over the bow - here it comes you are going to have to disclose all your flea market money, garage sale money
 - This makes sense, they are asking the VA to pay for the
 
+- Do you want to suppply? question 
+- Laughs - "No, not really. "
+- (first thing noticed) Do you want to provide your financial information - OF course I don't. 
+- Would I need to if I didn't have a prequalifying scenario.
+- My situation, all of my qualifiying stuff is right there. Me and the VA we go way back, 
+- I would put the question above the note (alert)
+- (Why) Do you want to provide, 
+- Looking for the bubbles (radio buttons), my participation. 
+- The explanation for the question should come after the question.
+- You kind of what people to disclosure their financial info anywyas, as part of course. 
+- I disclose all of my stuff because I want to help.
+- Put you don't have to above want to.
 
 > Participant questions:
 > - What worked well for you?
@@ -138,20 +139,6 @@ it is a rocky road to get to this spot for a lot of people, getting people to th
 > - [Does the participant open the additional info on qualifying eligibility factors?]
 > - [Does the participant click yes or no on the financial disclosure page and express why?]
 
-- Do you want to suppply? question 
-- Laughs - "No, not really. "
-- (first thing noticed) Do you want to provide your financial information - OF course I don't. 
-- Would I need to if I didn't have a prequalifying scenario.
-- My situation, all of my qualifiying stuff is right there. Me and the VA we go way back, 
-- I would put the question above the note (alert)
-- (Why) Do you want to provide, 
-- Looking for the bubbles (radio buttons), my participation. 
-- The explanation for the question should come after the question.
-- You kind of what people to disclosure their financial info anywyas, as part of course. 
-- I disclose all of my stuff because I want to help.
-- Put you don't have to above want to.
-
-
 **Observer rating of task completion (select below)**
 - [ ] 0 = no part of the task completed, much difficulty
 - [ ] 1 = Partial completion, much overlooked or task was difficult
@@ -163,7 +150,7 @@ it is a rocky road to get to this spot for a lot of people, getting people to th
 
 ## PRIMARY Task - Marital status and spouse information
 
-**Quotes**
+**Quotes/Notes**
 - You should have number of divorces
 - Honestly, that is some demographic information you should check into.
 - Becuase, it is ... I got 3. All three of my ex wives are freinds now. 
@@ -202,10 +189,19 @@ it is a rocky road to get to this spot for a lot of people, getting people to th
 
 
 ## PRIMARY Task - Adding dependents
-**Quotes**
+**Quotes/Notes**
 - Would put relationship at top, prior to the name.
 - Then the name, then social, DOB.
 - When did they become your dependend - on their date of birht (laugh)
+- Did not click on additional info component for more info about dependents
+- Scrolled up and down on Dependents additional info page
+- "Would do disability towards the bottom"
+- Did they live with you, paid college 
+- It terms of cacading - you want to pop off the easy questions, then the others. 
+- The hard questions first are off-putting.
+- If you do the popcorn stuff first, then get down to the real meat of the matter. 
+- If am sending them money - they are dependent (dependent support page)
+
 
 > Participant questions:
 > - What worked well for you?
@@ -222,17 +218,6 @@ it is a rocky road to get to this spot for a lot of people, getting people to th
 > - [Does the participant pause or are they confused by any of the dependent information questions?]
 
 
-**Observations & Notes**
-- Did not click on additional info component for more info about dependents
-- Scrolled up and down on Dependents additional info page
-- "Would do disability towards the bottom"
-- Did they live with you, paid college 
-- It terms of cacading - you want to pop off the easy questions, then the others. 
-- The hard questions first are off-putting.
-- If you do the popcorn stuff first, then get down to the real meat of the matter. 
-- If am sending them money - they are dependent (dependent support page)
-
-
 **Observer rating of task completion (select below)**
 - [ ] 0 = no part of the task completed, much difficulty
 - [ ] 1 = Partial completion, much overlooked or task was difficult
@@ -243,7 +228,7 @@ it is a rocky road to get to this spot for a lot of people, getting people to th
 
 ## PRIMARY Task - Editing and removing a dependent
 
-**Quotes**
+**Quotes/Notes**
 - It is a little bit wierd - the transition here. The geometry is just odd.
 - Put the yes or no between the question and who VA considers a dependent.
 - There is a lot of disjointed. 
@@ -251,17 +236,14 @@ it is a rocky road to get to this spot for a lot of people, getting people to th
 - You could reduse the noise, 
 - It is just a little odd
 - (live with you question to the top of page)
-
-> Things to watch for:
-> - [Does the participant clearly see the buttons to edit and delete dependents?]
-> - [Does the participant easily make their edit and continue on without getting hung up?]
-
-
-**Observations & Notes**
 - Pauses at this page for a minute
 - Comments would not change
 - It was clear, straight down the line
 
+
+> Things to watch for:
+> - [Does the participant clearly see the buttons to edit and delete dependents?]
+> - [Does the participant easily make their edit and continue on without getting hung up?]
 
 **Observer rating of task completion (select below)**
 - [ ] 0 = no part of the task completed, much difficulty
@@ -285,19 +267,9 @@ it is a rocky road to get to this spot for a lot of people, getting people to th
 - (Spouse income)
 
 
-> Participant questions:
-> - What worked well for you?
-> - What was unclear or didn’t work well for you?
-> - What would you like to change or add?
-
-**Answers**
-- Type here
-
 > Things to watch for:
 > - [Does the participant comment on the onboarding page or do they spend a lot of time here?]
 > - [Does the participant interact with any of the additional information components for more context needed?]
-
-
 
 **Observer rating of task completion (select below)**
 - [ ] 0 = no part of the task completed, much difficulty
@@ -308,7 +280,7 @@ it is a rocky road to get to this spot for a lot of people, getting people to th
 
 ## PRIMARY Task - Deductible information
 
-**Quotes**
+**Quotes/Notes**
 - I would put the note at the bottom
 - Most of the explanations should go at the bottom, some people will go straight to the answer without the benefit of the note
 - When you have to read unnecessary stuff, expenses being higher than income that is a fairly unique situstion. 
@@ -330,9 +302,7 @@ it is a rocky road to get to this spot for a lot of people, getting people to th
 **Response**
 - 10/10 - the alternatives are not sustainable. 
 
-
-
-Back to intro page rating - prepared rating
+(Back to intro page rating - prepared rating)
 - I think it was very fair in telling them what is coming up
 - Very important for people to come back to it, a placeholder. Not just scrub all the data if they clock out.
 - It used to not be that way
