--- a/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P5-120822-JS.md
+++ b/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P5-120822-JS.md
@@ -9,9 +9,10 @@ Jessica Stump (jessica.stump@adhocteam.us)
 
 ---
  ## Warm-up Questions
-
+ - My healthevet yes, I use that
+ - Yes (family/self/surveys)
  
- 
+ - "I'm not used to doing this on the phone" (screen sharing setup, switch between apps)
  
 ## Task - Start Application
 > Things to watch for:
@@ -20,18 +21,26 @@ Jessica Stump (jessica.stump@adhocteam.us)
 
 
 **Quotes/Notes**
-- type here
-- For stand-out verbatim quotes put in " "  
+- (scrolls,)
+- "It's really - it's too much information"
+- --- audio breakup -- should be simpler
+- (asked to repeat) To me it seems fine but to somebody older, it needs to be a lot simpler
+- A lot clearer
 - 
 
 > Participant questions:
 > On a scale of 1-5 (1 being non very poorly and 5 being very well) - how prepared does this page make you feel about the application you are about to begin? Why?
 **Answers**
-- Type here
+- 5
+- Very detailed, explains what infomration to gather and what I need to do
 
 > Can you tell us more about what you would have to do in preparation for filling out this application?
 **Answer**
-- Type here
+- Make sure I have my information DD214, make sure I have my social security and insurance. I would have all this information ready and available already. That is the problem with the DD214 they would have to dig through paperwork or they don't have it.
+- Most people dont
+- Thats the only thing I see as a problem right there, the DD214 is the big one
+- I guess I would have to start here where it says sign in (doesn't scroll to find non-authenticated option, only saw button at top of page)
+- 
 
 
 ## Task - Veteran information
@@ -41,15 +50,18 @@ Jessica Stump (jessica.stump@adhocteam.us)
 
 
 **Quotes/Notes**
-- "type here"
-
-> Participant questions:
-> - What worked well for you?
-> - What was unclear or didn’t work well for you?
-> - What would you like to change or add?
-
-**Answers**
-- Type here
+- Nothing really, just normal standard stuff I am used to filling out on any other side (name)
+- I don't want to put in my social though
+- There is just, normal, I used to work in , so I am so cautious of putting my social in on a government site
+- (works through pages and questions easily)
+- (Impression so far) - Normal stuff we answer every day, this is normal. Don't have a negative or postive about it, it is just normal.
+- I just don't like the social part, that is the only thing I dont like, but I guess that is undestandable
+(American Indian page)
+- This doesn't pertain to me, it doesn't. I dont have an opinion about it, it doesn't pertain to me. it is clear
+- (completes address info and moves to email and phone page quickly)
+- I never use my home phone, I just put my mobile number in there
+- (preferred method) Most people now, text messages and things of that nature
+- (preferrence) Usually do both (phone and email)
 
 
 **Observer rating of task completion (select below)**
@@ -57,7 +69,7 @@ Jessica Stump (jessica.stump@adhocteam.us)
 - [ ] 1 = Partial completion, much overlooked or task was difficult
 - [ ] 2 = Partial completion, some areas were overlooked or task was slightly difficult
 - [ ] 3 = Most of the task was completed with little difficulty
-- [ ] 4 = All parts of the task were completed with no difficulty
+- [x] 4 = All parts of the task were completed with no difficulty
 
 
 ## Task - VA benefits & military service 
@@ -67,8 +79,15 @@ Jessica Stump (jessica.stump@adhocteam.us)
 
 
 **Quotes/Notes**
-- "type here"
-
+- (Answers yes to 50% and above)
+- (part of protoptype is cutt off with partipants phone, can't read all of question)
+- So far it has been smooth, no glitches or anything like that. It is easy.
+- If it like this mobile, I would rather do this. They are so long and detailed.
+(upload page)
+- Most people don't have a copy, they would have to 
+- Maybe it is as simple as them taking a picture of it and uploading it
+(previous experience)
+- Taken pictures using my iPhone, iPad and also went to the library and have it scanned and sent to my email. I have done several ways. 
 
 ---
 
@@ -79,7 +98,10 @@ Jessica Stump (jessica.stump@adhocteam.us)
 > - [Does the participant click yes or no on the financial disclosure page and express why?]
 
 **Quotes/Notes**
-- "type here"
+- I don't know, just looks like regular information
+- I would probably ask myself why do they need this inromation what is that for
+- Why would they need to know that? Deductible information
+- That's just me, I would still give the information but just be curious why
 
 
 > Participant questions:
@@ -87,14 +109,22 @@ Jessica Stump (jessica.stump@adhocteam.us)
 > - What was unclear or didn’t work well for you?
 > - What would you like to change or add?
 **Answers**
-- Type here
+- I would take out the deductible information
+- You are going there for you benefits 
+- Not go into detail of how much people make and things of that nature
+- Who is in your household is fine
+- But how much you make and your taxes deducted doens't impact your healthcare
+- Disclosure question should be in the beginnning - that should have been put in before the financials. 
+- The qualifying eligibilty factors
+
+
 
 
 **Observer rating of task completion (select below)**
 - [ ] 0 = no part of the task completed, much difficulty
 - [ ] 1 = Partial completion, much overlooked or task was difficult
 - [ ] 2 = Partial completion, some areas were overlooked or task was slightly difficult
-- [ ] 3 = Most of the task was completed with little difficulty
+- [x] 3 = Most of the task was completed with little difficulty
 - [ ] 4 = All parts of the task were completed with no difficulty
 
 
@@ -107,8 +137,10 @@ Jessica Stump (jessica.stump@adhocteam.us)
 > - [Does the participant comment the question is intrusive or that they would skip and/or answer untruthfully?]
 
 **Quotes/Notes**
-- "type here"
-- 
+- Like this stuff right here , good (marital status page)
+-(Spouse information pages) - I think its fine, it is smooth. Simple- 
+- No comment on live with you, address questions
+
 
 **Observer rating of task completion (select below)**
 - [ ] 0 = no part of the task completed, much difficulty
@@ -126,8 +158,11 @@ Jessica Stump (jessica.stump@adhocteam.us)
 
 
 **Quotes/Notes**
-- "type here"
-- 
+- The date they became dependent - that is a little odd 
+(Additional information)
+- I am assuming this is for a dependent over the age of 18.
+- I was asking about the expense questions, kids in your household under the age of 18
+- I guess this is fine, I am just trying to read through the jargon is all
 
 > Participant questions:
 > - What worked well for you?
@@ -135,14 +170,14 @@ Jessica Stump (jessica.stump@adhocteam.us)
 > - What would you like to change or add?
 
 **Answers**
-- Type here
+- No (nothing unclear, would not add anything)
 
 **Observer rating of task completion (select below)**
 - [ ] 0 = no part of the task completed, much difficulty
 - [ ] 1 = Partial completion, much overlooked or task was difficult
 - [ ] 2 = Partial completion, some areas were overlooked or task was slightly difficult
 - [ ] 3 = Most of the task was completed with little difficulty
-- [ ] 4 = All parts of the task were completed with no difficulty
+- [x] 4 = All parts of the task were completed with no difficulty
 
 
 ## PRIMARY Task - Editing and removing a dependent
@@ -151,15 +186,22 @@ Jessica Stump (jessica.stump@adhocteam.us)
 > - [Does the participant easily make their edit and continue on without getting hung up?]
 
 **Quotes/Notes**
-- "type here"
-- 
+- So you would say yes right?
+- Then you would add the rest of the dependents
+- Ok this is the same thing, gothcha
+- I would go in and edit, type in edit
+- Then you would update the information right?
+- I hit continue until it takes you back to that page right there?
+- Click the button with remove with the trash can
+- Hit yes to remove it
+
 
 **Observer rating of task completion (select below)**
 - [ ] 0 = no part of the task completed, much difficulty
 - [ ] 1 = Partial completion, much overlooked or task was difficult
 - [ ] 2 = Partial completion, some areas were overlooked or task was slightly difficult
 - [ ] 3 = Most of the task was completed with little difficulty
-- [ ] 4 = All parts of the task were completed with no difficulty
+- [x] 4 = All parts of the task were completed with no difficulty
 
 
 ## PRIMARY Task - Annual income
@@ -168,21 +210,25 @@ Jessica Stump (jessica.stump@adhocteam.us)
 > - [Does the participant interact with any of the additional information components for more context needed?]
 
 **Quotes/Notes**
-- "type here"
+- I mean it's .. I guess (reading) I don't know
+- As far as the income, it's fine for the people it applies to I guess
+- It makes sense, if they have a job or anything
+- Or any other income, that's fine
+
 
 > Participant questions:
 > - What worked well for you?
 > - What was unclear or didn’t work well for you?
 > - What would you like to change or add?
 **Answers**
-- Type here
+- No, it's fine
 
 **Observer rating of task completion (select below)**
 - [ ] 0 = no part of the task completed, much difficulty
 - [ ] 1 = Partial completion, much overlooked or task was difficult
 - [ ] 2 = Partial completion, some areas were overlooked or task was slightly difficult
 - [ ] 3 = Most of the task was completed with little difficulty
-- [ ] 4 = All parts of the task were completed with no difficulty
+- [x] 4 = All parts of the task were completed with no difficulty
 
 ## PRIMARY Task - Deductible information
 
@@ -191,39 +237,54 @@ Jessica Stump (jessica.stump@adhocteam.us)
 > - [Does the participant notice and call attention to the alert component?]
 
 **Quotes/Notes**
-- "type here"
+- This is a lot I guess
+- Getting all these numbers and figures just to apply for benefits, it's just a lot
+- It is asking too much
+- Some people just don't know some of this stuff, you are just paying the bill
+- I don't remember how much I spend on this expense here, prices are going up and down
 
 ---
 
 ## Post-Task Interview 
 
-> [NPS Repeat Question]
-> How likely are you to recommend this online application to another Veteran? [Scale of 0 - 10]
-
-**Response**
-- Type here
-
 > [Study Specific]
 
-> What are your thoughts on the order of the questions as they were presented in the prototype? Did anything surprise you?
+(Re-rank financial intro page)
+- I mean it did prepare me, I can't read all of it, 
+- People just skimm through stuff like that
+- People wait till they get to it, man, I have to put all that information in there
 
+(time to gather info)
+- It would take more than an hour, I would have to do all the math
+- I would have to look up medical expense
+- More than an hour
+- I don't know if this form, this app, should take this long
+- You should be able to just go throught the information 
+
+(intro page)
+- I remember the first page
+- I would probably rate it a 3 now, need my spouse's information, those type of expenses.
+- As you go further, you need more details. As you look at it you think you need the basics, yeah I can give you estimates. but then yeah
+
+> Change or update question
 **Answer**
-- Type here
+- If they can give an estimate, that is fine that is easier on people. Instead of having to go thorugh all the insuran
+- Too much financial questions for applying to healthcare, one has nothing to do wiwth the other
+- I don't know why this all applies to healthcare
+- What you spend, vs me trying to get a doctor or get medicine
 
 
 > Did you feel there was not enough explanation given for the questions, too much or was just about right?
-
 **Answer**
-- Type here
-
-
-> Do you have multiple dependents and if so, is there an application experience, good or bad, that stands out in your mind you can tell us more about?
-
-**Answers**
-- Type here
+- Yes, very much so. Very smooth
+- Some of the questions are just - why am I filling out this information?
+- Everyhting was - you could undertand
 
 
 
+
+
+- This was pretty easy, first time doing soemthing like this. Wasn't anything difficult. 
 
 ---
 
